--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* header */
+
+header{
+    background-color: #D1DCD1;
+    margin: 0 auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+}
+
+.nav{
+    display: flex;
+    justify-content: center;
+}
+
+.header_logo{
+    width: 200px;
+}
