--- a/public/css/app.css
+++ b/public/css/app.css
@@ -59,6 +59,7 @@ header{
     align-items: center;
     margin-bottom: 4px;
 }
+
 /* form{
     margin-top: 60px;
 }
@@ -271,4 +272,49 @@ header{
     width: 100px;
     text-align: center;
     color: white;
+}
+
+/* questions */
+.question-info{
+    display: inline;
+    align-items: center;
+}
+.question-create{
+    display: flex;
+    justify-content: center;
+}
+.form-question {
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 20px;
+    justify-content: space-around;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+.question {
+    border: 3px solid #6C7C79;
+    border-radius: 8px;
+    background-color: #D1DCD1;
+    padding: 15px;
+}
+
+.question-btn {
+    display:flex;
+    gap: 40px;
+    margin-top: 10px;
+    border: 2px solid #6C7C79;
+    border-radius: 8px;
+    background-color: #6C7C79;
+    color: white;
+    width: 150px; /* Adjust the width of the buttons if needed */
+    height: 32px;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 2px 2px 5px #6C7C79;
+    font-weight: bold;
+}
+.question-buttons{
+    display: flex;
+    justify-content: space-between;
 }
