--- a/public/css/app.css
+++ b/public/css/app.css
@@ -266,16 +266,20 @@ header{
     width: 300px;
 }
 .deceased-sub-container{
-
     width: 968px;
 }
 .form-input-questionnaire input{
     border: 2px solid #6C7C79;
     width: 100%;
     margin-bottom: 20px;
+    
 
 }
+.form-input-questionnaire{
+    width: 100%;
+}
 .deceased-btn{
+    margin-top: 20px;
     border: 2px solid #6C7C79;
     border-radius: 8px;
     background-color: #6C7C79;
@@ -284,4 +288,46 @@ header{
     color: white;
     margin-top: 20px;
     margin-bottom: 50px;
+    box-shadow: 2px 2px 5px #6C7C79;
 }
+.deceased-form-flex{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 100px;
+    margin-right: 50px;
+    width: 100%;
+}
+.birth-date{
+    display: flex;
+    
+}
+.custom-file-upload-deceased {
+    border: 2px solid #6C7C79;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    padding: 60px;
+    width: 300px;
+}
+.custom-upload{
+    display: flex;
+    justify-content: center;
+}
+
+
+/* questionnaire/questions/ */
+.questions-container{
+    display: flex;
+    justify-content: center;
+}
+.questions-sub-container{
+    display: flex;
+    justify-content: center;
+    width: 968px;
+    
+}
+.questions-box{
+    display: flex;
+
+}
+
