--- a/public/css/app.css
+++ b/public/css/app.css
@@ -326,8 +326,26 @@ header{
     width: 968px;
     
 }
-.questions-box{
-    display: flex;
-
+.question-box{ 
+    margin-top: 40px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 50px;
+    border: 2px solid #6C7C79;
+    border-radius: 8px;
+    padding: 10px;
+    background-color: #D1DCD1;
+    box-shadow: 2px 2px 5px #6C7C79;
 }
+.question-title{
+    margin-top: 40px;
+    text-align: center;
+    font-size: 20px;
+}
+.question-btn-flex{
+    display: flex;
+    justify-content: space-between;
+}
+
+
 
