--- a/public/css/app.css
+++ b/public/css/app.css
@@ -247,6 +247,21 @@ header{
     justify-content: center;
 }
 
+.questionnaire-delete-btn{
+    border: 2px solid #6C7C79;
+    border-radius: 8px;
+    background-color: #6C7C79 !important;
+    color: white;
+    width: 200px;
+    height: 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 2px 2px 5px #6C7C79;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
 
 
 
