Media queries Company pagina
De company pagina ziet er anders uit per grote van het scherm

Er staat minder naast elkaar hoe kleiner je scherm is zodat je niet naar de zijkant kan scrollen

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -506,3 +506,17 @@ header{
     margin-top: 40px;
     margin-bottom: 40px;
 }
+
+
+@media screen and (max-width: 768px) { 
+    .companies-grid{
+        display: grid;
+        grid-template-columns: auto auto;
+    }
+}
+@media screen and (max-width: 600px) { 
+    .companies-grid{
+        display: grid;
+        grid-template-columns: auto;   
+    }
+}
