Media query question pagina
Grid word aangepast per grote van scherm

Ook worden de knoppen beter neergezet voor kleinere schermen

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -513,10 +513,23 @@ header{
         display: grid;
         grid-template-columns: auto auto;
     }
+    .form-question{
+        display: grid;
+        grid-template-columns: auto;
+    }
 }
-@media screen and (max-width: 600px) { 
+@media screen and (max-width: 425px) { 
     .companies-grid{
         display: grid;
         grid-template-columns: auto;   
+    }
+    .question {
+        width: 310px !important;
+    }
+    .textfield{
+        width: 250px !important;
+    }
+    .input-question{
+        width: 250px !important;
     }
 }
