--- a/public/css/app.css
+++ b/public/css/app.css
@@ -547,6 +547,18 @@ header{
     margin-top: 40px;
 }
 
+.client-code-btn{
+    color: white;
+    border: 2px solid #6C7C79;
+    border-radius: 8px;
+    background-color: #6C7C79;
+    padding: 5px;
+    margin-top: 20px;
+    font-weight: bold;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
 
 /* Media Queries */
 @media screen and (max-width: 768px) { 
